@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?org-vrjuggler-jccl-settings definition.version="3.1"?>
 <definition xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.vrjuggler.org/jccl/xsd/3.1/definition" name="msft_speech_recog_string" icon_path="jar:file:${VJ_BASE_DIR}/bin/beans/IntersenseEditor.jar!/org/vrjuggler/vrjconfig/customeditors/intersense/images/IS_logo.gif" xsi:schemaLocation="http://www.vrjuggler.org/jccl/xsd/3.1/definition http://www.vrjuggler.org/jccl/xsd/3.1/definition.xsd">
-   <definition_version version="1" label="MSFT Speech Recog String">
-      <help>MSFT Speech Recognition String Device</help>
-      <parent>speech_recog_digital_string</parent>
+   <definition_version version="1" label="Microsoft Speech API (String)">
+      <help>Microsoft Speech API string-driven speech recognition device</help>
+      <parent>string_device</parent>
       <category>/Devices</category>
       <property valuetype="string" variable="false" name="grammar_file">
          <help/>
